[package]
name = "nunchi-coins-chain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A demo blockchain that executes the Nunchi coins module, used for coin-operation integration tests."

[dependencies]
nunchi-coins = { workspace = true }
nunchi-common = { workspace = true }
commonware-actor = { workspace = true }
commonware-broadcast = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true, features = ["mocks"] }
commonware-cryptography = { workspace = true, features = ["mocks"] }
commonware-formatting = { workspace = true }
commonware-macros = { workspace = true }
commonware-p2p = { workspace = true }
commonware-resolver = { workspace = true }
commonware-runtime = { workspace = true }
commonware-storage = { workspace = true }
commonware-utils = { workspace = true }
commonware-parallel = { workspace = true }
commonware-math = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
governor = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
