[package]
name = "nunchi-coins-chain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A demo blockchain that executes the Nunchi coins module, used for coin-operation integration tests."

[lints]
workspace = true

[dependencies]
nunchi-coins = { workspace = true, features = ["mempool"] }
nunchi-authority = { workspace = true }
nunchi-chain = { workspace = true }
nunchi-clob = { workspace = true }
nunchi-common = { workspace = true }
nunchi-crypto = { workspace = true }
nunchi-dkg = { workspace = true }
nunchi-mempool = { workspace = true }
nunchi-oracle = { workspace = true }
nunchi-rpc = { workspace = true }
commonware-actor = { workspace = true }
commonware-broadcast = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true, features = ["mocks"] }
commonware-formatting = { workspace = true }
commonware-cryptography = { workspace = true, features = ["mocks"] }
commonware-glue = { workspace = true }
commonware-macros = { workspace = true }
commonware-p2p = { workspace = true }
commonware-resolver = { workspace = true }
commonware-runtime = { workspace = true }
commonware-storage = { workspace = true }
commonware-utils = { workspace = true }
commonware-parallel = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
governor = { workspace = true }
jsonrpsee = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { version = "1", features = ["signal"] }

[dev-dependencies]
commonware-math = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client"] }
tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
