[package]
name = "nunchi-custom-module"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A compiled custom module skeleton for downstream Nunchi SDK modules."

[features]
default = ["rpc"]
rpc = ["dep:jsonrpsee", "dep:nunchi-rpc"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-formatting = { workspace = true }
jsonrpsee = { workspace = true, optional = true }
nunchi-common = { workspace = true }
nunchi-crypto = { workspace = true }
nunchi-rpc = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
